changed screen size so layout displays as expected. Aligned sidebar icons to be central vertically. fixed white screen issue at bottom by removing height 100% from contact container

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
 }
 
 .contact-header {
