--- a/src/Components/SideBar/sidebar.scss
+++ b/src/Components/SideBar/sidebar.scss
@@ -11,7 +11,7 @@
 
     position: -webkit-sticky;
     position: sticky;
-    top: 400px;
+    top: 50%;
 
         .icon-link{
             cursor: pointer;
